--- a/css/styles.css
+++ b/css/styles.css
@@ -169,11 +169,13 @@ font-family: "Raleway", sans-serif;
 /* portfolio */
 
 .menu-button {
+    color: rgb(33, 33, 33);
     font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.625;
     letter-spacing: 0.03em;
+    background: rgb(245, 244, 250);
     cursor: pointer;    
 }
 .menu-button:hover {
